# echoport

./: .gitignore  .pre-commit-config.yaml  justfile  pyproject.toml
docs/: review_response.md
specs/: 2026-01-27_initial_prd.md
src/backups/: backup_engine.py  fastdeploy_client.py  minio_client.py  models.py  restore_engine.py  urls.py  views.py
src/backups/management/commands/: backup.py  cleanup_old_backups.py  create_devdata.py  ensure_superuser.py  run_scheduled_backups.py
src/backups/migrations/: 0001_initial.py  0002_add_file_count.py  0003_add_icon_field.py  0004_restorerun.py
src/backups/static/css/: styles.css
src/backups/templates/: base.html
src/backups/templates/backups/: dashboard.html  restore_detail.html  run_detail.html  target_detail.html
src/backups/templates/backups/partials/: restore_status.html  target_card.html
src/backups/templates/registration/: login.html
src/backups/templatetags/: backup_tags.py
src/django/config/: urls.py  wsgi.py
src/django/config/settings/: base.py  local.py  production.py  test.py
tests/: conftest.py  test_health_endpoint.py  test_models.py  test_retention.py  test_scheduled_backups.py
