[project]
name = "echoport"
version = "0.1.0"
description = "Backup orchestration service with FastDeploy integration"
authors = [
    { name = "Jochen Wersdörfer", email = "jochen-echoport@wersdoerfer.de" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "django-environ",
    "django-htmx",
    "httpx>=0.28.0",
    "granian>=0.8.0",
    "whitenoise",
    "croniter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backups"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-django",
    "pytest-asyncio",
    "django-stubs[compatible-mypy]",
    "types-croniter",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = "-ra"
DJANGO_SETTINGS_MODULE = "config.settings.test"
django_find_project = false
testpaths = ["tests"]
pythonpath = [
    "src/django",
    "src",
]

[tool.mypy]
files = ["src/"]
plugins = ["mypy_django_plugin.main"]
mypy_path = "src/django:src"

[[tool.mypy.overrides]]
module = [
    "environ",
    "dj_database_url",
    "debug_toolbar",
    "debug_toolbar.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.test"
